--- a/production/index.html
+++ b/production/index.html
@@ -47,7 +47,7 @@
           <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
             <div class="menu_section">
               <ul class="nav side-menu">
-                <li><a href="index.html"><i class="fa fa-home"></i> Home </a>
+                <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a>
                 </li>
                 <li><a href="form_wizards.html"><i class="fa fa-home"></i> ลงทะเบียนผู้สมัคแบบเต็ม </a>
                 </li>
@@ -322,7 +322,7 @@
             <div class="x_panel tile fixed_height_320">
                 <div class="x_panel">
                     <div class="x_title">
-                      <h2>Bar graph <small>Sessions</small></h2>
+                      <h2>เปรียบเทียบสมาชิกในแต่ละจังหวัด<small</small></h2>
                       <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
@@ -355,12 +355,12 @@
       <!-- /page content -->
 
       <!-- footer content -->
-      <!-- <footer>
+      <footer>
         <div class="pull-right">
-          Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+         
         </div>
         <div class="clearfix"></div>
-      </footer> -->
+      </footer>
       <!-- /footer content -->
     </div>
   </div>
@@ -404,7 +404,7 @@
   <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
   <!-- Custom Theme Scripts -->
-  <script src="../build/js/custom.min.js"></script>
+  <script src="../build/js/custom.js"></script>
 
 </body>
 
