--- a/production/tables.html
+++ b/production/tables.html
@@ -96,7 +96,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="x_panel">
                 <div class="x_title">
-                  <h2>ตรวจสอบรายชื่อสมาชิก</h2>
+                  <h2>การตรวจสอบการเป็นสมาชิกพรรค</h2>
                   <div class="clearfix"></div>
                 </div>
                 <div class="x_content">
@@ -104,7 +104,7 @@
                     <span class="section">กรอกข้อมูลเพื่อค้นหา</span>
 
                     <div class="item form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">ชื่อ
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">บัตรประจำตัวประชาชนเลขที่
                         <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
@@ -113,7 +113,7 @@
                       </div>
                     </div>
                     <div class="item form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">นามสกุล
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">ชื่อ-สกุล
                         <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
@@ -126,7 +126,7 @@
                       <div class="col-md-2 col-sm-2 col-xs-12">
                         <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" >
                       </div>
-                      <label class="control-label col-md-1 col-sm-1 col-xs-12" for="first-name">สังกัด</label>
+                      <label class="control-label col-md-1 col-sm-1 col-xs-12" for="first-name">สาขา</label>
                       <span class="required"></span>
                       </label>
                       <div class="col-md-2 col-sm-2 col-xs-12">
@@ -186,7 +186,7 @@
                           <th class="column-title">ชื่ีอ</th>
                           <th class="column-title">นามสกุล</th>
                           <th class="column-title">จังหวัด</th>
-                          <th class="column-title">สังกัดเขตจังหวัด</th>
+                          <th class="column-title">สาขาเขตจังหวัด</th>
                           <th class="column-title">ประเภทสมาชิก</th>
                           <th class="column-title">สถานะสมาชิก</th>
                           <th class="column-title ">
@@ -213,7 +213,7 @@
                           <td class="a-right a-right ">กรุงเทพ</td>
                           <td class="a-right a-right ">กรุงเทพ</td>
                           <td class="a-right a-right ">รายปี</td>
-                          <td class="a-right a-right ">ปกติ</td>
+                          <td class="a-right a-right ">พ้นสภาพ</td>
                           <td class=" last">
                             <ul class="nav navbar-right panel_toolbox">
                               <li>
